welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: not found: value Buzz
		return Buzz
                       ^fizzBuzz:5: error: not found: value Fizz
		return Fizz
                       ^fizzBuzz:7: error: not found: value retur
		retur FizzBuzz
                ^fizzBuzz:9: error: type mismatch;
 found   : Int
 required: String
		return a
                       ^